--- a/myfirst_project/templates/home_page.html
+++ b/myfirst_project/templates/home_page.html
@@ -22,16 +22,16 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://images.unsplash.com/photo-1507146153580-69a1fe6d8aa1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                 alt="Automation" width="100%" height="500">
+                <img src="https://images.unsplash.com/photo-1563207153-f403bf289096?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+                 alt="Automation" width="100%" height="auto">
               </div>
               <div class="carousel-item">
                 <img src="https://images.unsplash.com/photo-1532188363366-3a1b2ac4a338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                 alt="Raspberry pi" width="100%" height="500">
+                 alt="Raspberry pi" width="100%" height="auto">
               </div>
               <div class="carousel-item">
                 <img src="https://images.unsplash.com/photo-1555664424-778a1e5e1b48?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                 alt="Sensors" width="100%" height="500">
+                 alt="Sensors" width="100%" height="auto">
               </div>
             </div>
 
@@ -72,7 +72,7 @@
               <li>An accelerometer shall capture the physical coordinates of the robot at that point in time, and share the same asa part of the text message notifications sent through the GSM module.</li>
             </ul>
             <p>
-              
+
             </p>
           </div>
 
