--- a/myfirst_project/templates/record_list.html
+++ b/myfirst_project/templates/record_list.html
@@ -11,7 +11,7 @@
       <div class="col-md-12">
         <div class="jumbotron">
           <br>
-          <h2 class="">Welcome to results page</h2>
+          <h2 class="" style="text-align:center">Welcome to results page</h2>
         </div>
       </div>
   </div>
